welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:5: error: not found: value num
  var max3:Int = nums(num.lenght-1)
                      ^max2Value:6: error: not found: value num
  var max4:Int = nums(num.lenght-1)
                      ^